[TASK] - Add appointments CRUD
